force-app/main/default/objects/Career__c/Career__c.object-meta.xml
<CustomObject>
    <description>Contains jobs listing</description>
    <label>Career</label>
    <nameField>
        <label>Career Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Careers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>