force-app/main/default/objects/Career__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Job Description</description>
    <inlineHelpText>Enter Job Description</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>