force-app/main/default/objects/Career__c/fields/Job_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Job_Requirement__c</fullName>
    <description>Job Requirement</description>
    <inlineHelpText>Enter Job Requirement</inlineHelpText>
    <label>Job Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>