force-app/main/default/objects/Career__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant General Manager</fullName>
            </value>
            <value>
                <fullName>Shift Leader</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Delivery Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>